--- a/src/renderer/splash.html
+++ b/src/renderer/splash.html
@@ -7,12 +7,12 @@
 
   <body
     style="
-      background-image: url(./splash.png);
+      background-image: url(./splash.bmp);
       background-repeat: no-repeat;
       background-size: contain;
-      height: 360px;
+      height: 240px;
       overflow: hidden;
-      width: 360px;
+      width: 480px;
     "
   ></body>
 </html>
